--- a/acw.css
+++ b/acw.css
@@ -1,22 +1,19 @@
-h_one {
-   font-family: 'Times New Roman';
-   font-size: 20px;
-   background: #ffffff;
-   color: red;
+div.h_one {
+   font-family: "Times New Roman", Georgia, Serif;
    text-align:center;
 }
 
-h_two {
-   font-family: arial,verdana,sans-serif;
-   font-size: 20px;
-   background: #ffffff;
-   color: black;
+div.h_two {
+   font-family: "Times New Roman", Georgia, Serif;
+   text-align:center;
+}
+
+div.randomquote {
+   font-family: "Times New Roman", Georgia, Serif;
    text-align:center;
 }
 
 p.default1 {
-   font-family: arial,verdana,sans-serif;
-   font-size: 16px;
-   background: #ffffff;
-   color: navy;
-}
+   font-family: "Times New Roman", Georgia, Serif;
+   margin-left: 2cm;
+
